-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 26
-
Component/s: hotspot
-
b04
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8375146 | 26.0.1 | Hao Sun | P3 | Resolved | Fixed | b03 |
| JDK-8374657 | 26 | Hao Sun | P3 | Resolved | Fixed | b30 |
os: ubuntu-24.04
gcc: 13.3.0
arch: both aarch64 and x86_64
reproduce:
configure --with-debug-level=release --disable-cds
the snippet of error log:
ERROR: Build failed for target 'images' in configuration '/home/haosun/local-work/test/aaa/build-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_jfrClassDefineEvent.o:
/tmp/test/aaa/jdk-src/src/hotspot/share/jfr/support/jfrClassDefineEvent.cpp:128:16: error: ‘traceid get_source(const AOTClassLocation*, JavaThread*)’ defined but not used [-Werror=unused-function]
128 | static traceid get_source(const AOTClassLocation* cl, JavaThread* jt) {
| ^~~~~~~~~~
cc1plus: all warnings being treated as errors
* All command lines available in /tmp/test/aaa/build-release/make-support/failure-logs.
=== End of repeated output ===
gcc: 13.3.0
arch: both aarch64 and x86_64
reproduce:
configure --with-debug-level=release --disable-cds
the snippet of error log:
ERROR: Build failed for target 'images' in configuration '/home/haosun/local-work/test/aaa/build-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_jfrClassDefineEvent.o:
/tmp/test/aaa/jdk-src/src/hotspot/share/jfr/support/jfrClassDefineEvent.cpp:128:16: error: ‘traceid get_source(const AOTClassLocation*, JavaThread*)’ defined but not used [-Werror=unused-function]
128 | static traceid get_source(const AOTClassLocation* cl, JavaThread* jt) {
| ^~~~~~~~~~
cc1plus: all warnings being treated as errors
* All command lines available in /tmp/test/aaa/build-release/make-support/failure-logs.
=== End of repeated output ===
- backported by
-
JDK-8374657 JFR build failure with CDS disabled due to -Werror=unused-function after JDK-8365400
-
- Resolved
-
-
JDK-8375146 JFR build failure with CDS disabled due to -Werror=unused-function after JDK-8365400
-
- Resolved
-
- caused by
-
JDK-8365400 Enhance JFR to emit file and module metadata for class loading
-
- Resolved
-
- links to
-
Commit(jdk26)
openjdk/jdk/3103fa08
-
Commit(master)
openjdk/jdk/e1d81c09
-
Review(jdk26)
openjdk/jdk/28976
-
Review(master)
openjdk/jdk/28917
(2 links to)