8373122: JFR build failure with CDS disabled due to -Werror=unused-function after JDK-8365400

`get_source(const AOTClassLocation* cl, JavaThread* jt)` is only used by
`JfrClassDefineEvent::on_restoration()` within an `INCLUDE_CDS` guard.

Add the same `INCLUDE_CDS` guard to mitigate the GCC warning.

Tests: JDK build with CDS disabled passed on both x86_64 and aarch64.
       tier1~3 passed on both x86_64 and aarch64.